# por_for_git

./: .readthedocs.yml  LICENSE  README.md
docs/: conf.py  index.rst  modules.rst
docs/source/: conf.py  index.rst
mac-re/: diskRdzeLocate_2015_04_28.c
mac-re/1D_por/: .gitignore  1D_drift  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
mac-re/1D_por/apps/: main.cpp
mac-re/1D_por/include/: define.h  funcs.h  initial.h  iterate.h  numerics.h  output.h  parser.h
mac-re/1D_por/src/: define.cpp  funcs.cpp  initial.cpp  iterate.cpp  numerics.cpp  output.cpp  parser.cpp
mac-re/Programok/C++/: .gitignore  1DdensThinDisk.cpp  README.md
mac-re/Programok/bolygokeletkezes/: por.c
mac-re/Programok/káoszdetektálás/: fli.c  rli.c  stdmap.c  stdmap0.d  stdmapljap.c
mac-re/kódok_1_mappa/: 2013.08.01. terv
mac-re/kódok_1_mappa/Programkódok/: calculate_midplane_temp.c  ha2.c  letolt.sh  mutat.c  mutat2.c  numderiv_2.c  numderivtovabb.c  temp.c
mac-re/kódok_1_mappa/Programkódok/C/1D_surf_1D_por/: change_log_drift~
mac-re/kódok_1_mappa/Programkódok/kód/: README~  changelog_codes  changelog_codes~  egycentr.c
mac-re/kódok_1_mappa/Programkódok/kód/jul11/: hohatar.c
mac-re/kódok_1_mappa/Programkódok/kód/jun17/: kep.list  kep.list~  kep.sh~
mac-re/kódok_1_mappa/Programkódok/kód/jun20/: kep.list  (+3 more)
mac-re/kódok_1_mappa/cikkhez/: dustdrift1Dver16_rdf.c  init.sh  init_dust.ver.6.c
mac-re/updated_and_checked_random_codes/: README.md  calc_or  calc_temp_origin.c
mac-re/updated_and_checked_random_codes/T_calc_midplane/: calc  calculate_midplane_temp.c
(+122 files in other folders)
